# Merc-Tasks

./: readme.md  report.md
Project_RuStock/: .gitignore  Cargo.toml
Project_RuStock/src/: auth.rs  db.rs  main.rs  product.rs  purchase.rs  sale.rs
Reports/: AbdelrahmanEmad_Report_14-7.md  AbdelrahmanEmad_Report_15-7.md  AbdelrahmanEmad_Report_16-7.md  AbdelrahmanEmad_Report_20-7.md  AbdelrahmanEmad_Report_21-7.md  AbdelrahmanEmad_Report_22-7.md
RiseIn-Tasks/example/src/example_backend/: Cargo.toml
RiseIn-Tasks/open_lot/: Cargo.toml  DEPLOYMENT.md  INTEGRATION.md  README.md  build-frontend.sh  deploy.sh  dev.sh  dfx.json  package.json  setup-frontend.sh  update-canister-ids.sh
RiseIn-Tasks/open_lot/src/open_lot_backend/: Cargo.toml  open_lot_backend.did
RiseIn-Tasks/open_lot/src/open_lot_frontend/: .ic-assets.json5  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
RiseIn-Tasks/voting_system/: Cargo.toml  dfx.json  package.json
RiseIn-Tasks/voting_system/src/voting_system_backend/: voting_system_backend.did
RiseIn-Tasks/voting_system/src/voting_system_frontend/: index.html  package.json  vite.config.js
Task_1/: .gitignore
Task_1/src/: main.rs
Task_2/src/: main.rs
Task_3/src/: main.rs
Task_PassVault/: .gitignore  Cargo.toml  passwords.db  passwords.json
Task_PassVault/src/: main.rs  pentry.rs
Task_RuStock/: Cargo.toml
Task_RuStock/src/: db.rs  main.rs
developer_liftoff/example/: Cargo.toml  package-lock.json
developer_liftoff/example/src/example_frontend/: package.json
(+18 files in other folders)
