[package]
name = "Project_RuStock"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4"
rusqlite = { version = "0.31.0", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.8.0", features = ["v4"] }
rust_xlsxwriter = { version = "0.89.1", features = ["chrono"] }
